[gd_scene load_steps=3 format=2]

[ext_resource path="res://Escenas/Player/DominicAtacks/MoveAtqespinas.gd" type="Script" id=1]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Barlife/374 sin t√≠tulo_20211230105354.png" type="Texture" id=2]

[node name="MoveAtqespinas" type="Node2D"]
position = Vector2( 512, 0 )
script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 296 )

[node name="Interfazbotones" type="CanvasLayer" parent="."]

[node name="window" type="ColorRect" parent="Interfazbotones"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = 252.0
margin_right = 191.0
margin_bottom = 292.0
color = Color( 0, 0, 0, 0.552941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarTime" type="TextureProgress" parent="Interfazbotones"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = 252.0
margin_right = 190.0
margin_bottom = 292.0
max_value = 2.0
step = 0.001
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerB" type="Timer" parent="Interfazbotones"]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="Interfazbotones/TimerB" to="." method="_on_TimerB_timeout"]
